# cenv

./: .env  .gitignore  Cargo.toml  README.md  cenv.1  cenv.go  cenv.schema.json  go.mod  go.sum  install.sh  main.go
.github/: publishing.md
.github/workflows/: build.yaml  ci.yaml  publish.yaml
cenv/: cenv.go  cenv_test.go  error.go  parser.go  parser_test.go  pkg.go  schema.go
cenv-install/: main.go
clients/cenv-go/: README.md  cenv.go  cenv_test.go  go.mod  schema.go
cmd/: cmd.go  version.go
installer/: go.mod
internal/: cenv.go  cenv_test.go  error.go  parser.go  parser_test.go  pkg.go  schema.go
src/: main.rs
src/cmd/: mod.rs  version.rs
src/schema/: mod.rs  tests.rs
test/: check_test.go  parser_test.go  update_test.go
test/cases/check_cases/: 0.env  1.env  1.json  2.env  2.json  3.env  3.json  4.env  4.json
test/cases/parser_cases/: 0.env  1.env  2.env  3.env  4.env
test/cases/update_cases/: .env  cenv.schema.json
